--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.M2024A"
         tools:targetApi="31">
         <activity
+            android:name=".ColorMixer"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ShowReceipt"
             android:exported="false" />
         <activity
@@ -26,16 +35,12 @@
         </activity>
         <activity
             android:name=".MessageActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.M2024A">
-
-        </activity>
+            android:theme="@style/Theme.M2024A"></activity>
     </application>
 
 </manifest>
